Fix Linter's errors and minor style issues

--- a/src/components/books/book.module.css
+++ b/src/components/books/book.module.css
@@ -8,6 +8,17 @@
   padding: 1.5rem;
 }
 
+.formSection {
+  display: flex;
+  justify-content: center;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
 .bookInfoContainer {
   display: flex;
   flex-direction: column;
