--- a/src/components/books/book.module.css
+++ b/src/components/books/book.module.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
+
 .card {
-  margin: 1em 3em;
+  margin: 1em 5em;
   background-color: #fff;
   border: 2px solid #e8e8e8;
   display: flex;
@@ -25,16 +28,22 @@
 }
 
 .bookCategory {
+  font-family: 'Montserrat', sans-serif;
   color: gray;
+  font-size: 0.875rem;
 }
 
 .bookTitle {
-  font-size: 1.5rem;
-  font-weight: bolder;
+  font-family: 'Roboto Slab', serif;
+  font-size: 1.375rem;
+  font-weight: 900;
 }
 
 .bookAuthor {
-  color: #4386bf;
+  font-family: 'Roboto Slab', serif;
+  font-weight: 400;
+  font-size: 0.875rem;
+  color: #4386bf !important;
 }
 
 .buttonsContainer {
@@ -42,9 +51,11 @@
 }
 
 .btn {
+  font-family: 'Roboto Slab', serif;
+  font-weight: 400;
   color: #4386bf;
   background-color: #fff;
-  font-size: 1rem;
+  font-size: 0.875rem;
   text-decoration: none;
   border: none;
   cursor: pointer;
@@ -60,8 +71,8 @@
   border-right: 6px solid #3498db;
   border-bottom: 6px solid #3498db;
   border-radius: 50%;
-  width: 5rem;
-  height: 5rem;
+  width: 4.25rem;
+  height: 4.25rem;
 }
 
 .percentageContainer {
@@ -76,6 +87,7 @@
 
 .completed {
   color: gray;
+  font-size: 0.875rem;
 }
 
 .chapterContainer {
@@ -86,12 +98,14 @@
 }
 
 .currentChapter {
-  font-size: 1.2rem;
+  font-size: 0.813rem;
   color: gray;
 }
 
 .chapter {
   color: #121212;
+  font-size: 1.2rem;
+  margin-top: 0.25rem;
 }
 
 .updateProgress {
@@ -104,4 +118,6 @@
   border: none;
   border-radius: 3px;
   cursor: pointer;
+  font-family: 'Roboto Slab', serif;
+  font-weight: 400;
 }
