--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+
 body {
   margin: 0;
-  font-family: "Montserrat-Bold", "Courier New", monospace;
+  font-family: "Montserrat-Regular", serif;
   background-color: #fafafa;
 }
 
 * {
   box-sizing: border-box;
-}
-
-code {
-  font-family:
-    source-code-pro,
-    Menlo,
-    Monaco,
-    Consolas,
-    "Courier New",
-    monospace;
 }
